<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/login_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="IHB Logo"
            android:maxWidth="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_ihb" />

        <TextView
            android:id="@+id/login_title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo_img"
            android:layout_marginTop="30dp"

            android:text="@string/intelli"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/h_dark_green" />

        <TextView
            android:id="@+id/register_subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title_name"
            android:layout_marginTop="30dp"

            android:text="@string/please_enter_your_credentials_to_login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/h_gray" />

        <EditText
            android:id="@+id/txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_subTitle"
            android:layout_marginTop="20dp"
            android:autofillHints=" E-mail address"
            android:background="@drawable/edittext_grey"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray"
            tools:ignore="VisualLintTextFieldSize" />

        <ImageView
            android:id="@+id/img_show_hide_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_below="@id/txt_login_email"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_login_email"
            android:layout_marginTop="15dp"

            android:autofillHints="Password"
            android:background="@drawable/edittext_grey"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/txt_login_password"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_green"

            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="20dp"

            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/h_light_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dont_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password_link"
            android:layout_marginTop="20dp"

            android:text="Don't have an account?"
            android:textAlignment="textStart"
            android:textColor="@color/h_light_gray"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/new_user_register_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dont_have_an_account"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"

            android:text="@string/register_here"
            android:textAlignment="textStart"
            android:textColor="@color/h_gray"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>