<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/register_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="Haritha Logo"
            android:maxWidth="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_ihb" />

        <TextView
            android:id="@+id/register_title_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_logo_img"
            android:layout_marginTop="30dp"

            android:text="@string/intelli"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/h_dark_green" />



        <TextView
            android:id="@+id/register_title_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_title_one"
            android:layout_marginTop="30dp"

            android:text="@string/please_enter_your_details_to_register_on_the_app"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/h_gray" />


        <EditText
            android:id="@+id/txt_register_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_title_three"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_grey"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_register_user_name"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_grey"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray" />

        <EditText
            android:id="@+id/txt_register_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_register_email"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_grey"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray" />


        <EditText
            android:id="@+id/txt_register_farm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_register_mobile_number"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_grey"
            android:hint="@string/garden_type"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray" />

        <EditText
            android:id="@+id/txt_register_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_register_farm_name"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_grey"
            android:hint="Location*"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray" />

        <Spinner
            android:id="@+id/sp_register_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_register_location"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_grey"
            android:entries="@array/countries_array"

            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txt_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_register_country"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray" />

        <EditText
            android:id="@+id/txt_register_confirmed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_register_password"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_grey"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/h_light_gray" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/txt_register_confirmed_password"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_green"

            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/already_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register"
            android:layout_marginTop="30dp"

            android:text="@string/already_have_an_account"
            android:textAlignment="textStart"
            android:textColor="@color/h_light_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/already_have_an_account_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/already_have_an_account"
            android:layout_marginBottom="50dp"

            android:text="@string/login_here"
            android:textAlignment="textStart"
            android:textColor="@color/h_gray"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>